# glocr

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cleanIAMDocs.cpp  image.cpp  image.h  imageprocessing.cpp  imageprocessing.h  imagesegmentation.cpp  imagesegmentation.h  main.cpp  utils.cpp  utils.h
tests/: imageprocessing_test.cpp  imagesegmentation_test.cpp  phase1_test.cpp  phase2_test.cpp  utils_test.cpp
